<resources>
    <string name="app_name">Relayance</string>
    <string name="detail_screen_title">Details</string>
    <string name="add_customer">Add customer</string>
    <string name="email">email</string>
    <string name="save_changes">Save changes</string>
    <string name="name">name</string>
    <string name="no_email">No email</string>
    <string name="no_name">No name</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="new_ribbon">New</string>
    <string name="contentDescription_go_back">Go back</string>
    <string name="error_title">Customer not found</string>
    <string name="unknown_error">Unknown error</string>
    <string name="loading_title">Loading...</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="customer_added">Customer added</string>
    <string name="invalid_name">The name cannot be empty or consist only of spaces</string>
</resources>